--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
-.circular--square{
-  border-radius: 50%;
+.circular-square{
+  border-radius: 80%;
 }
 html {
   background-color: #00539F;
 }
 body {
+  font-family: 'Girassol', cursive;
+  font-size: 24px;
   width: 600px;
   margin: 0 auto;
   background-color: #FF9500;
